# DealRoom-AI

./: .env.example  .gitignore  AGENTS.md  DealRoom_AI_Presentation.pptx  DealRoom_AI_Proposal.md  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml  generate_mock_docs.py  main.py  make_pptx.py  plan.md  pyproject.toml
.github/workflows/: ci.yml
.specify/: feature.json
.specify/extensions/: .registry
.specify/integrations/: claude.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/templates/: plan-template.md
.specify/workflows/: workflow-registry.json
backend/: Dockerfile  Dockerfile.worker  alembic.ini  requirements.txt
backend/app/: main.py
backend/migrations/: env.py
backend/tests/: conftest.py  test_access_control.py  test_advanced.py  test_advanced_rag.py  test_approval.py  test_audit_log.py  test_auth.py  test_download.py  test_ingestion.py  test_ml.py  test_openapi.py  test_qa.py  (+4 more)
docs/: 00_project_overview.md  01_database_schema.md  02_backend_api.md  03_agents.md  04_ml_classifier.md  05_frontend.md  06_infra.md  07_workplan.md  08_access_control_audit.md  09_redis.md  10_ml_business_context.md  engineering_best_practices.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js
ml/: Readme.md  evaluate.py  train.py
scripts/: backup.py
summary_reports/: phase-0-setup.md  phase-1-access-control.md  phase-2-ingestion.md  phase-3-research-agent.md  phase-4-ml-classifier.md  phase-5-rag-synthesis.md  phase-6.md  phase-7.md  phase-8.md  phase-9.md
vault/: config.hcl  init.sh
(+176 files in other folders)
